Adding namespace function

--- a/test/all.html
+++ b/test/all.html
@@ -11,5 +11,6 @@
   <script src="./lib/qunit.js"></script>
   <script src="../dist/zther-lib.js"></script>
   <script src="./all.js"></script>
+  <script src="./namespace.js"></script>
 </body>
 </html>
