Added tests to time classes

--- a/test/all.html
+++ b/test/all.html
@@ -12,5 +12,6 @@
   <script src="../dist/zther-lib.js"></script>
   <script src="./all.js"></script>
   <script src="./namespace.js"></script>
+  <script src="./timeTest.js"></script>
 </body>
 </html>
