adding ArrayUtil with test

--- a/test/all.html
+++ b/test/all.html
@@ -13,5 +13,6 @@
   <script src="./all.js"></script>
   <script src="./namespace.js"></script>
   <script src="./timeTest.js"></script>
+  <script src="./arrayTest.js"></script>
 </body>
 </html>
